--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -107,6 +107,10 @@
         </div>
       </form>
     </mat-tab>
+    <mat-tab label="Factures" *ngIf="selectedProvider.id">
+      <invoice-list *ngIf="this.invoiceSearch.customerOrders && this.invoiceSearch.customerOrders.length>0"
+        [invoiceSearch]="invoiceSearch" [isForTiersIntegration]="true"></invoice-list>
+    </mat-tab>
     <mat-tab label="Documents" *ngIf="selectedProvider.id">
       <attachments [entity]="selectedProvider" [editMode]="editMode" [entityType]="PROVIDER_ENTITY_TYPE.entityType">
       </attachments>
