--- a/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/generic-autocomplete/generic-autocomplete.component.html
@@ -16,4 +16,6 @@
       {{displayLabel(type)}}
     </mat-option>
   </mat-autocomplete>
+  <mat-hint *ngIf="hint && hint.length>0">
+    {{hint}}</mat-hint>
 </mat-form-field>
