--- a/client/src/app/modules/miscellaneous/components/single-attachment/single-attachment.component.html
+++ b/client/src/app/modules/miscellaneous/components/single-attachment/single-attachment.component.html
@@ -9,7 +9,8 @@
       matTooltip="Télécharger le fichier">download
     </mat-icon>
   </span><span>
-    <mat-icon class="pointer" (click)="uploadFile()" color="accent" matTooltip="Choisir un fichier">upload
+    <mat-icon *ngIf="editMode" class="pointer" (click)="uploadFile()" color="accent"
+      matTooltip="Choisir un fichier">upload
     </mat-icon>
   </span>
 </div>
