--- a/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
+++ b/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.html
@@ -283,11 +283,36 @@
                   </mat-card>
                 </mat-dialog-content>
               </mat-tab>
-              <mat-tab [label]="getTabLabel(TIERS_ENTITY_TYPE)" *ngIf="getEntitiesForTab(TIERS_ENTITY_TYPE).length>0">
+              <mat-tab [label]="getTabLabel(TIERS_ENTITY_TYPE)"
+                *ngIf="getEntitiesForTab(TIERS_ENTITY_TYPE).length>0 || getEntitiesForTab(RESPONSABLE_ENTITY_TYPE).length>0">
                 <mat-dialog-content class="mat-content">
                   <mat-card class="pointer" *ngFor="let notification of getEntitiesForTab(TIERS_ENTITY_TYPE)"
                     (click)="openEntity($event,notification,TIERS_ENTITY_TYPE)"
                     (auxclick)="openEntity($event,notification,TIERS_ENTITY_TYPE)">
+                    <ng-container *ngIf="notification.notificationType==TIERS_DEPOSIT_MANDATORY">
+                      <mat-card-title-group>
+                        <mat-card-title matBadge="X" matBadgePosition="above before"
+                          [matBadgeHidden]="notification.isRead" matBadgeColor="warn" matBadgeSize="small"
+                          class="hide-text">Tiers à placer à l'acompte</mat-card-title>
+                        <mat-card-subtitle><span>{{notification.createdDateTime |date:'EEEE d LLLL yyyy à
+                            HH:mm'}}</span>
+                        </mat-card-subtitle>
+                        <ng-container [ngTemplateOutlet]="cardActions"
+                          [ngTemplateOutletContext]="{notification:notification}">
+                        </ng-container>
+                      </mat-card-title-group>
+                      <mat-card-content>
+                        {{notification.detail1}} <br>
+                        Merci de le rappeler pour éclaircir la situation et de considérer le
+                        passage de sa fiche de TIERS à l’acompte obligatoire.<br>
+                        Le paramètre se situe dans l’onglet 'Pièces, réglements, facturations & relances' > ‘Réglement’.
+                      </mat-card-content>
+                    </ng-container>
+                    <mat-divider></mat-divider>
+                  </mat-card>
+                  <mat-card class="pointer" *ngFor="let notification of getEntitiesForTab(RESPONSABLE_ENTITY_TYPE)"
+                    (click)="openEntity($event,notification,RESPONSABLE_ENTITY_TYPE)"
+                    (auxclick)="openEntity($event,notification,RESPONSABLE_ENTITY_TYPE)">
                     <ng-container *ngIf="notification.notificationType==TIERS_DEPOSIT_MANDATORY">
                       <mat-card-title-group>
                         <mat-card-title matBadge="X" matBadgePosition="above before"
