--- a/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
+++ b/client/src/app/modules/quotation/components/add-debour/add-debour.component.html
@@ -111,7 +111,7 @@
         </td>
       </tr>
     </table>
-    <table class="full-width  " *ngIf=" isNotInpi() && canAddNewInvoice()">
+    <table class="full-width  " *ngIf="   canAddNewInvoice()">
       <tr>
         <td>
           Rechercher une facture Infogreffe :
