--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -813,6 +813,15 @@
             </td>
           </tr>
           <tr>
+          <tr>
+            <td>
+              <select-customer-order-origin [(model)]="constant.customerOrderOriginWebSite"
+                label="Origine des commandes - site www.jss.fr" [form]="constantForm"
+                propertyName="customerOrderOriginWebSite" [isMandatory]="true" [isDisabled]="!editMode">
+              </select-customer-order-origin>
+            </td>
+          </tr>
+          <tr>
             <td>
               <autocomplete-employee [(model)]="constant.employeeBillingResponsible" [form]="constantForm"
                 propertyName="employeeBillingResponsible" [isMandatory]="true" [isDisabled]="!editMode"
