--- a/client/src/app/modules/administration/components/referentials/generic-referential/generic-referential.component.html
+++ b/client/src/app/modules/administration/components/referentials/generic-referential/generic-referential.component.html
@@ -4,7 +4,7 @@
       <input matInput (keyup)="applyFilter($event.target)" placeholder="Rechercher">
     </mat-form-field>
   </div>
-  <div class="table-container-scroll">
+  <div class="table-container-scroll mat-elevation-z2">
     <sort-table [columns]="displayedColumns" [values]="entities" tableName="Référentiel"
       (onRowClick)="selectEntity($event)" [idRowSelected]="idRowSelected" [filterText]="searchText">
     </sort-table>
