--- a/client/src/app/modules/tools/pdf-tools/pdf-tools.component.html
+++ b/client/src/app/modules/tools/pdf-tools/pdf-tools.component.html
@@ -1,4 +1,18 @@
-<form>
-  <input type="file" (change)="onFileSelected($event)">
-  <button (click)="compressPdf()">Comprimir</button>
-</form>
+<div class="mat-elevation-z2 form-div">
+  <form [formGroup]="attachmentForm">
+    <div class="full-width container" *ngIf="file==null ">
+      <input class="pointer" type="file" #fileDropRef id="fileDropRef" (change)="fileBrowseHandler($event.target)" />
+      <mat-icon color="accent"  class="mat-icon-upload" color="warn">file_upload</mat-icon>
+      <h3>Glissez/déposez votre fichier ici</h3>
+      <h3>ou</h3>
+      <label for="fileDropRef">Recherchez sur votre ordinateur</label>
+      <p class="max-size">(5 Mo max.)</p>
+    </div>
+    <generic-input *ngIf="file!=null" [(model)]="filename" label="Nom du fichier" [form]="attachmentForm"
+      propertyName="filename" [isMandatory]="true" [isDisabled]="false" [maxLength]="250"></generic-input>
+    <div *ngIf="file!=null">
+    </div>
+    <div align="center" class="send-button"
+      (click)="uploadFile()"> <button mat-raised-button color="warn">Uploader le fichier</button></div>
+  </form>
+</div>
