--- a/client/src/app/modules/miscellaneous/components/forms/chips-employee/chips-employee.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/chips-employee/chips-employee.component.html
@@ -1,7 +1,7 @@
 <mat-form-field class="full-width" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
   <mat-chip-grid #chipListEmployee>
-    <mat-chip-row *ngFor="let employee of model" (removed)="removeElement(employee)">
+    <mat-chip-row *ngFor="let employee of model" (removed)="removeElement(employee)" class="row-field-container">
       <avatar [employee]="employee" [size]="17" class="chips-avatar"></avatar>
       {{employee.firstname}} {{employee.lastname}}
       <button matChipRemove *ngIf="!isDisabled">
